Fix button spacing.

--- a/projects/plugins/jetpack/extensions/blocks/recurring-payments/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/recurring-payments/editor.scss
@@ -61,7 +61,6 @@
 
 		&__field-button {
 			margin-right: 4px;
-			margin-top: 20px;
 		}
 
 		&__field-error .components-text-control__input {
